--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
                 </div>
                  <!--==Box 7==-->
                  <div class="bars-box">
-                    <h3>Express.js</h3>
-                    <span>60%</span>
+                    <h3>Typescript</h3>
+                    <span>80%</span>
                     <div class="light-bar"></div>
-                    <div class="percent-bar express-bar"></div>
+                    <div class="percent-bar typescript-bar"></div>
                 </div>
             </div>
             <div class="skills-img">
