--- a/index.html
+++ b/index.html
@@ -101,21 +101,21 @@
                 <!--==Box 2==-->
                 <div class="bars-box">
                     <h3>CSS</h3>
-                    <span>90%</span>
+                    <span>98%</span>
                     <div class="light-bar"></div>
                     <div class="percent-bar css-bar"></div>
                 </div>
                 <!--==Box 3==-->
                 <div class="bars-box">
                     <h3>JavaScript</h3>
-                    <span>87%</span>
+                    <span>91%</span>
                     <div class="light-bar"></div>
                     <div class="percent-bar js-bar"></div>
                 </div>
                 <!--==Box 4==-->
                 <div class="bars-box">
                     <h3>React</h3>
-                    <span>85%</span>
+                    <span>88%</span>
                     <div class="light-bar"></div>
                     <div class="percent-bar react-bar"></div>
                 </div>
@@ -128,17 +128,17 @@
                 </div>
                  <!--==Box 6==-->
                  <div class="bars-box">
-                    <h3>Node js</h3>
-                    <span>75%</span>
+                    <h3>Sass</h3>
+                    <span>93%</span>
                     <div class="light-bar"></div>
-                    <div class="percent-bar node-bar"></div>
+                    <div class="percent-bar sass-bar"></div>
                 </div>
                  <!--==Box 7==-->
                  <div class="bars-box">
-                    <h3>Typescript</h3>
-                    <span>80%</span>
+                    <h3>Screen Responsiveness</h3>
+                    <span>97%</span>
                     <div class="light-bar"></div>
-                    <div class="percent-bar typescript-bar"></div>
+                    <div class="percent-bar screen-bar"></div>
                 </div>
             </div>
             <div class="skills-img">
