--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="home-text">
             <span>Hello, I'm</span>
             <h1>Vinicius Andrade</h1>
-            <h2>Full Stack Developer</h2>
+            <h2>Front End Developer</h2>
             <p>Who sleeps dreams, who lives realizes.🌙</p>
             <a href="https://api.whatsapp.com/send?phone=5588997290392&text=Hi%20Vinicius%2C%20I%20liked%20your%20profile%20and%20would%20like%20to%20talk%20to%20you%20about%20an%20opportunity%20%3C3" class="btn">Contact Me</a>
         </div>
