--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <span>playszezo@gmail.com</span>
                     </div>
                 </div>
-                <a href="https://drive.google.com/file/d/1ToB1VhFEUnxLN74GBG569-Z5Tac2iAry/view?usp=sharing" class="btn">Download Cv</a>
+                <a href="https://drive.google.com/file/d/1V0t_aYN_TVQuSNJRW61F9MLDd5F9a9u9/view" class="btn">Download Cv</a>
             </div>
         </div>
     </section>
@@ -159,12 +159,12 @@
                 <h3>Frontend Development</h3>
                 <a href="#">Learn More</a>
             </div>
-            <!--==Box 2==-->
+            <!--==Box 2
             <div class="services-box">
                 <i class='bx bx-server' ></i>
                 <h3>Backend Development</h3>
                 <a href="#">Learn More</a>
-            </div>
+            </div> ==-->
             <!--==Box 3==-->
             <div class="services-box">
                 <i class='bx bx-brush' ></i>
