--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 </div>
                 <!--==Box 3==-->
                 <div class="bars-box">
-                    <h3>JavaScript</h3>
+                    <h3>Javascript</h3>
                     <span>91%</span>
                     <div class="light-bar"></div>
                     <div class="percent-bar js-bar"></div>
@@ -121,24 +121,24 @@
                 </div>
                  <!--==Box 5==-->
                  <div class="bars-box">
-                    <h3>Angular</h3>
-                    <span>79%</span>
-                    <div class="light-bar"></div>
-                    <div class="percent-bar angular-bar"></div>
-                </div>
-                 <!--==Box 6==-->
-                 <div class="bars-box">
                     <h3>Sass</h3>
-                    <span>93%</span>
+                    <span>95%</span>
                     <div class="light-bar"></div>
                     <div class="percent-bar sass-bar"></div>
                 </div>
+                 <!--==Box 6==-->
+                 <div class="bars-box">
+                    <h3>C# | .Net</h3>
+                    <span>93%</span>
+                    <div class="light-bar"></div>
+                    <div class="percent-bar csharp-bar"></div>
+                </div>
                  <!--==Box 7==-->
                  <div class="bars-box">
-                    <h3>Screen Responsiveness</h3>
-                    <span>97%</span>
+                    <h3>MySQL | MariaDB</h3>
+                    <span>91%</span>
                     <div class="light-bar"></div>
-                    <div class="percent-bar screen-bar"></div>
+                    <div class="percent-bar mysql-bar"></div>
                 </div>
             </div>
             <div class="skills-img">
@@ -159,12 +159,12 @@
                 <h3>Frontend Development</h3>
                 <a href="#">Learn More</a>
             </div>
-            <!--==Box 2
+            <!--==Box 2==-->
             <div class="services-box">
                 <i class='bx bx-server' ></i>
                 <h3>Backend Development</h3>
                 <a href="#">Learn More</a>
-            </div> ==-->
+            </div>
             <!--==Box 3==-->
             <div class="services-box">
                 <i class='bx bx-brush' ></i>
