--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
                     <!--==Box 3==-->
                     <div class="info-box">
                         <i class='bx bxs-envelope' ></i>
-                        <span>playszezo@gmail.com</span>
+                        <span>john2667br@gmail.com</span>
                     </div>
                 </div>
-                <a href="https://drive.google.com/file/d/1V0t_aYN_TVQuSNJRW61F9MLDd5F9a9u9/view" class="btn">Download Cv</a>
+                <a href="#" class="btn">Download CV</a>
             </div>
         </div>
     </section>
@@ -202,7 +202,7 @@
         <div class="btn-more"><a href="https://github.com/johnAndrade65?tab=repositories" class="btn-m">More Projects</a></div>  
     </section>
     <!--==Contact==-->
-    <section class="contact" id="contact">
+    <!--<section class="contact" id="contact">
         <div class="heading">
             <h2>Contact</h2>
             <span>Connect With Us</span>
@@ -214,7 +214,7 @@
                 <textarea name="" id="" cols="30" rows="10" placeholder="Write Message Here..."></textarea>
                 <input type="button" value="Send" class="contact-button">
             </form>
-        </div>
+        </div>-->
     </section>
     <!--==Footer==-->
     <div class="footer">
