--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li><a href="#skills">Skills</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <!--<li><a href="#contact">Contact</a></li>-->
             <div class="bx bx-moon" id="darkmode"></div>
         </ul>
     </header>
@@ -41,7 +41,7 @@
         <div class="home-text">
             <span>Hello, I'm</span>
             <h1>Vinicius Andrade</h1>
-            <h2>Front End Developer</h2>
+            <h2>Full Stack Developer</h2>
             <p>Who sleeps dreams, who lives realizes.🌙</p>
             <a href="https://api.whatsapp.com/send?phone=5588997290392&text=Hi%20Vinicius%2C%20I%20liked%20your%20profile%20and%20would%20like%20to%20talk%20to%20you%20about%20an%20opportunity%20%3C3" class="btn">Contact Me</a>
         </div>
@@ -100,14 +100,14 @@
                 </div>
                 <!--==Box 2==-->
                 <div class="bars-box">
-                    <h3>CSS</h3>
+                    <h3>CSS | SASS</h3>
                     <span>98%</span>
                     <div class="light-bar"></div>
                     <div class="percent-bar css-bar"></div>
                 </div>
                 <!--==Box 3==-->
                 <div class="bars-box">
-                    <h3>Javascript</h3>
+                    <h3>Javascript | Typescript</h3>
                     <span>91%</span>
                     <div class="light-bar"></div>
                     <div class="percent-bar js-bar"></div>
@@ -121,10 +121,10 @@
                 </div>
                  <!--==Box 5==-->
                  <div class="bars-box">
-                    <h3>Sass</h3>
-                    <span>95%</span>
+                    <h3>Screen responsiveness</h3>
+                    <span>98%</span>
                     <div class="light-bar"></div>
-                    <div class="percent-bar sass-bar"></div>
+                    <div class="percent-bar screen-bar"></div>
                 </div>
                  <!--==Box 6==-->
                  <div class="bars-box">
@@ -218,18 +218,14 @@
     </section>
     <!--==Footer==-->
     <div class="footer">
-        <h2>Coding Home</h2>
+        <h2>Social media</h2>
         <div class="footer-social">
             <a href="https://www.instagram.com/_andradevinicius65/"><i class='bx bxl-instagram' ></i></a>
             <a href="https://www.linkedin.com/in/vinicius-andrade-ab5706229/"><i class='bx bxl-linkedin' ></i></a>
             <a href="https://www.youtube.com/channel/UCloS88_0JuBdMgKxJAAcwUQ"><i class='bx bxl-youtube' ></i></a>
         </div>
     </div>
-    <!--==Copyright==-->
-    <div class="copyright">
-        <p>Created By <a href="">Foolish Developer</a> | All Right Reserved.</p>
-    </div>
-    
+
     <!--==Link To JS Code==-->
     <script src="./js/script.js"></script>
 </body>
