--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <span>john2667br@gmail.com</span>
                     </div>
                 </div>
-                <a href="#" class="btn">Download CV</a>
+                <a href="https://drive.google.com/file/d/1QrmDRm509ZBVWf8e7omUG8ZyB_AxEMQL/view?usp=share_link" class="btn">Download CV</a>
             </div>
         </div>
     </section>
