update profile picture

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <!--==About Content==-->
         <div class="about-container">
             <div class="about-img">
-                <img src="./images/perfil-2.jpg" alt="">
+                <img src="./images/perfil-3.jpg" alt="">
             </div>
             <div class="about-text">
                 <p>A guy full of dreams, goals and a purpose. <br> I'm currently Front End Developer but am migrating to the Full Stack Developer area.<br>
@@ -78,7 +78,7 @@
                         <span>john2667br@gmail.com</span>
                     </div>
                 </div>
-                <a href="https://drive.google.com/file/d/1QrmDRm509ZBVWf8e7omUG8ZyB_AxEMQL/view?usp=share_link" class="btn">Download CV</a>
+                <a href="https://drive.google.com/file/d/1xmcb1OmRwsZkYxHLbUM-LuLtb5F-7mhQ/view?usp=share_link" class="btn">Download CV</a>
             </div>
         </div>
     </section>
@@ -114,21 +114,21 @@
                 </div>
                 <!--==Box 4==-->
                 <div class="bars-box">
-                    <h3>React</h3>
+                    <h3>React | Styled Components</h3>
                     <span>88%</span>
                     <div class="light-bar"></div>
                     <div class="percent-bar react-bar"></div>
                 </div>
                  <!--==Box 5==-->
                  <div class="bars-box">
-                    <h3>Screen responsiveness</h3>
-                    <span>98%</span>
+                    <h3>Node js | Mustache</h3>
+                    <span>90%</span>
                     <div class="light-bar"></div>
-                    <div class="percent-bar screen-bar"></div>
+                    <div class="percent-bar node-bar"></div>
                 </div>
                  <!--==Box 6==-->
                  <div class="bars-box">
-                    <h3>C# | .Net</h3>
+                    <h3>C# | ASP.Net MVC</h3>
                     <span>93%</span>
                     <div class="light-bar"></div>
                     <div class="percent-bar csharp-bar"></div>
