--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Portfolio</title>
-    <!-- Favicon -->
+    <!--=FAVICON=-->
     <link rel="shortcut icon" href="./images/perfil-1.jpg" type="image/x-icon">
-    <!-- Link CSS -->
+    <!--=CSS LINK=-->
     <link rel="stylesheet" href="./css/style.css">
-    <!-- Box icons -->
+    <!--=BOX ICONS-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 </head>
 <body>
-    <!--==Navbar==-->
+    <!--==NAVBAR==-->
     <header>
         <a href="#home" class="logo">Portfolio</a>
         <div class="bx bx-menu" id="menu-icon"></div>
@@ -27,7 +27,7 @@
             <div class="bx bx-moon" id="darkmode"></div>
         </ul>
     </header>
-    <!--==Home==-->
+    <!--==HOME==-->
     <section class="home" id="home">
         <div class="social">
             <a href="https://www.linkedin.com/in/vinicius-andrade-ab5706229/"><i class='bx bxl-linkedin'></i></a>
@@ -46,13 +46,13 @@
             <a href="https://api.whatsapp.com/send?phone=5588997290392&text=Hi%20Vinicius%2C%20I%20liked%20your%20profile%20and%20would%20like%20to%20talk%20to%20you%20about%20an%20opportunity%20%3C3" class="btn">Contact Me</a>
         </div>
     </section>
-    <!--==About==-->
+    <!--==ABOUT==-->
     <section class="about" id="about">
         <div class="heading">
             <h2>About Me</h2>
             <span>Introduction</span>
         </div>
-        <!--==About Content==-->
+        <!--==CONTENT ABOUT==-->
         <div class="about-container">
             <div class="about-img">
                 <img src="./images/perfil-3.jpg" alt="">
@@ -62,78 +62,85 @@
                     I master several technologies, I tend to be creative and use logical reasoning to solve problems.<br>
                     Passionate about technology, I love working as a team, focusing on delivering results.</p>
                 <div class="information">
-                    <!--==Box 1==-->
+                    <!--==BOX 1==-->
                     <div class="info-box">
                         <i class='bx bxs-user' ></i>
                         <span>Vinicius Andrade</span>
                     </div>
-                    <!--==Box 2==-->
+                    <!--==BOX 2==-->
                     <div class="info-box">
                         <i class='bx bxs-phone' ></i>
                         <span>+55 88 99729-0392</span>
                     </div>
-                    <!--==Box 3==-->
+                    <!--==BOX 3==-->
                     <div class="info-box">
                         <i class='bx bxs-envelope' ></i>
                         <span>john2667br@gmail.com</span>
                     </div>
                 </div>
-                <a href="https://drive.google.com/file/d/1clzpJcobH5Et9mNYgVszTCdwYgz19wGA/view?usp=share_link" class="btn">Download CV</a>
+                <a href="https://drive.google.com/file/d/1yxTq7sK6V8aJOaBGhSgK3nDcV5EmSz8P/view?usp=share_link" class="btn">Download CV</a>
             </div>
         </div>
     </section>
-    <!--==Skills==-->
+    <!--==SKILLS==-->
     <section class="skills" id="skills">
         <div class="heading">
             <h2>Skills</h2>
             <span>My Skills</span>
         </div>
-        <!--==Skills Content==-->
+        <!--==SKILLS CONTENT==-->
         <div class="skills-container">
             <div class="bars">
-                <!--==Box 1==-->
+                <!--==BOX 1==-->
                 <div class="bars-box">
                     <h3>HTML</h3>
                     <span>100%</span>
                     <div class="light-bar"></div>
                     <div class="percent-bar html-bar"></div>
                 </div>
-                <!--==Box 2==-->
+                <!--==BOX 2==-->
                 <div class="bars-box">
                     <h3>CSS | SASS</h3>
                     <span>98%</span>
                     <div class="light-bar"></div>
                     <div class="percent-bar css-bar"></div>
                 </div>
-                <!--==Box 3==-->
+                <!--==BOX 3==-->
                 <div class="bars-box">
                     <h3>Javascript | Typescript</h3>
                     <span>95%</span>
                     <div class="light-bar"></div>
                     <div class="percent-bar js-bar"></div>
                 </div>
-                <!--==Box 4==-->
+                <!--==BOX 4==-->
                 <div class="bars-box">
                     <h3>React | Styled Components</h3>
                     <span>91%</span>
                     <div class="light-bar"></div>
                     <div class="percent-bar react-bar"></div>
                 </div>
-                 <!--==Box 5==-->
+                 <!--==BOX 5==-->
                  <div class="bars-box">
-                    <h3>Node js | Mustache</h3>
-                    <span>90%</span>
+                    <h3>Node js | Express</h3>
+                    <span>85%</span>
                     <div class="light-bar"></div>
                     <div class="percent-bar node-bar"></div>
                 </div>
-                 <!--==Box 6==-->
+                 <!--==BOX 6==-->
                  <div class="bars-box">
                     <h3>C# | ASP.Net MVC</h3>
                     <span>93%</span>
                     <div class="light-bar"></div>
                     <div class="percent-bar csharp-bar"></div>
                 </div>
-                 <!--==Box 7==-->
+                <!--==BOX 7==-->
+                <div class="bars-box">
+                    <h3>Git</h3>
+                    <span>98%</span>
+                    <div class="light-bar"></div>
+                    <div class="percent-bar git-bar"></div>
+                </div>
+                 <!--==BOX 8==-->
                  <div class="bars-box">
                     <h3>MySQL | MariaDB</h3>
                     <span>91%</span>
@@ -141,31 +148,31 @@
                     <div class="percent-bar mysql-bar"></div>
                 </div>
             </div>
-            <div class="skills-img">
-                <img src="./images/123.png" alt="">
-            </div>
+            <!--<div class="skills-img">
+                <img src="./images/perfil-3.jpg" alt="">
+            </div>-->
         </div>
     </section>
-    <!--==Services==-->
+    <!--==SERVICES==-->
     <section class="services" id="services">
         <div class="heading">
             <h2>Services</h2>
             <span>Our Services</span>
         </div>
         <div class="services-content">
-            <!--==Box 1==-->
+            <!--==BOX 1==-->
             <div class="services-box">
                 <i class='bx bx-code-alt' ></i>
                 <h3>Frontend Development</h3>
                 <a href="#">Learn More</a>
             </div>
-            <!--==Box 2==-->
+            <!--==BOX 2==-->
             <div class="services-box">
                 <i class='bx bx-server' ></i>
                 <h3>Backend Development</h3>
                 <a href="#">Learn More</a>
             </div>
-            <!--==Box 3==-->
+            <!--==BOX 3==-->
             <div class="services-box">
                 <i class='bx bx-brush' ></i>
                 <h3>UI/UX Design</h3>
@@ -173,7 +180,7 @@
             </div>
         </div>
     </section>
-    <!--==Portfolio==-->
+    <!--==PORTFOLIO==-->
     <section class="portfolio" id="portfolio">
         <div class="heading">
             <h2>Portfolio</h2>
@@ -201,7 +208,7 @@
         </div>
         <div class="btn-more"><a href="https://github.com/johnAndrade65?tab=repositories" class="btn-m">More Projects</a></div>  
     </section>
-    <!--==Contact==-->
+    <!--==CONTACT==-->
     <!--<section class="contact" id="contact">
         <div class="heading">
             <h2>Contact</h2>
@@ -216,7 +223,7 @@
             </form>
         </div>-->
     </section>
-    <!--==Footer==-->
+    <!--==FOOTER==-->
     <div class="footer">
         <h2>Social media</h2>
         <div class="footer-social">
@@ -226,7 +233,7 @@
         </div>
     </div>
 
-    <!--==Link To JS Code==-->
+    <!--==LINK JS CODE==-->
     <script src="./js/script.js"></script>
 </body>
 </html>
